--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ keywords: # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: mainlp-logo-50.png  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://mainlp.github.io # the base hostname & protocol for your site
+url: https://egslab.github.io # the base hostname & protocol for your site
 baseurl: / # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path: /contact # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
